fix(empty-state): update header spacing (#2766)

--- a/packages/cloud-cognitive/src/components/EmptyStates/_empty-state.scss
+++ b/packages/cloud-cognitive/src/components/EmptyStates/_empty-state.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2020, 2021
+// Copyright IBM Corp. 2020, 2023
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -23,10 +23,11 @@
 
     .#{$block-class}__header {
       @include carbon--type-style('productive-heading-03');
-      // stylelint-disable-next-line carbon/layout-token-use
-      padding-bottom: calc($spacing-01 + $spacing-02);
+
+      padding-bottom: $spacing-03;
       margin: 0;
     }
+
     .#{$block-class}__subtitle {
       @include carbon--type-style('body-long-01');
 
